--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "placeat.doc.tar.xz": d5d99519f53c1a697a6b17375b84535d4429bc82
-  "placeat.source.tar.xz": 11f4369fa49bd2be1630fc12f01e37754a7683f6
-  "placeat.tar.xz": 563a51b8a35af16038048e5b6712420b976cad1e
+  placeat.doc.tar.xz: 65d882de515c12bb89981ad987fbca8381122263
+  placeat.source.tar.xz: 98750011f693fe6fbc404ad5063f7b5a7891a1df
+  placeat.tar.xz: b8902b4235bd2f1764dd22a5c3fe06b6990b7064
